<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/football"
            android:title="@string/nav_football" />
        <item
            android:id="@+id/hockey"
            android:title="@string/nav_hockey" />
        <item
            android:id="@+id/tennis"
            android:title="@string/nav_tennis" />
        <item
            android:id="@+id/basketball"
            android:title="@string/nav_basketball" />
        <item
            android:id="@+id/volleyball"
            android:title="@string/nav_volleyball" />
        <item
            android:id="@+id/cybersport"
            android:title="@string/nav_cybersport" />
    </group>

</menu>
