<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erzhena.newsapp.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="2dp"
        android:scrollbars="vertical" />


    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_centerInParent="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/if_recycling_1936907" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:id="@+id/empty_title_text"
            android:layout_below="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/loadError"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingInProgress"
        android:layout_centerInParent="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:gravity="center_vertical"
            android:id="@+id/loadingInProgressImage"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/if_workplace_1936905" />

        <TextView
            android:id="@+id/loadingInProgressText"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/loadingInProgressImage"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:text="@string/loadingInProgress"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noInternet"
        android:layout_centerInParent="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <TextView
            android:id="@+id/noInternetTextView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:text="@string/noInternet"
            android:textSize="16sp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
